# Se

./: README.md  netlify.toml  run_dev.sh
backend/: README.md  pyproject.toml
backend/app/: database.py  deps.py  main.py  models.py  security.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/dependencies/: auth.py
backend/app/models/: __init__.py  audit.py  base.py  chat.py  product.py  setting.py  user.py  voucher.py
backend/app/routers/: __init__.py  ai.py  auth.py  chat.py  logs.py  orders.py  products.py  settings.py  system.py  users.py  vouchers.py  whatsapp.py
backend/app/schemas/: __init__.py  audit.py  chat.py  product.py  setting.py  voucher.py
backend/app/services/: ai.py  audit.py  email.py  integration_checks.py  whatsapp.py  zid.py
backend/app/utils/: encryption.py
docs/: tocardz-implementation-spec.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  App.tsx  api.js  index.css
frontend/src/components/: PublicChatWidget.tsx
