[tool.poetry]
name = "app"
version = "0.1.0"
description = "TwoCards backend"
authors = ["you <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.6" }
sqlmodel = "^0.0.22"
pydantic = "^2.9.0"
pydantic-settings = "^2.4.0"
python-jose = "^3.3.0"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }

[tool.poetry.group.dev.dependencies]
watchfiles = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
